# evidence-collection

./: .env.example  .gitignore  README.md  context.md  pyproject.toml
apps/api/src/api/: main.py
apps/api/src/api/routes/: tasks.py
apps/api/src/api/schemas/: tasks.py
apps/cli/src/cli/: main.py
docs/: architecture.md  auth_and_sso.md  evidence_flow.md  jira_mcp_contract.md  project_recreation_context.md  usage_guide.md
tests/: test_evidence_run.py  test_llm_planner.py  test_planner.py
